# RocketSimVis

./: .gitignore  CMakeLists.txt  README.md  RUN.bat  networking-format.md  requirements.txt  rlgym_sim_client_example.py  rocketsimvis_rlgym_sim_client.py
libsrc/cpp_sockets/src/: simple_cpp_sockets.h
models/: Ball.mtl  BoostPadLarge.mtl  Floor.mtl  LEGAL_NOTICE.txt  Octane.mtl
shaders/: fs.shader  ge.shader  vs.shader
src/: Color.h  Framework.h  Main.cpp  arena_shaders.py  config.py  const.py  main.py  outline_renderer.py  outline_shaders.py  qt_style_sheet.css  ribbon.py  shaders.py  socket_listener.py  state_manager.py  states.py  ui.py
src/Render/: Render.cpp  Render.h
src/Render/Camera/: Camera.cpp  Camera.h
src/Render/GLShader/: GLShader.cpp  GLShader.h
src/Render/Model/: Model.cpp  Model.h
src/Render/RenderEnt/: RenderEnt.cpp  RenderEnt.h
src/Render/RibbonEmitter/: RibbonEmitter.cpp  RibbonEmitter.h
src/Serialization/: Serialization.cpp  Serialization.h
src/VisInst/: VisInst.cpp  VisInst.h
